Fixed spacing and styling in light mode Fixed margin between table header and pools in grid view Fixed success badge text color in light mode

--- a/src/assets/styles/bootstrap/badge.scss
+++ b/src/assets/styles/bootstrap/badge.scss
@@ -2,6 +2,9 @@
 
 .badge {
   color: $text;
+  &.bg-success {
+    color: $text-dark;
+  }
 }
 
 body.dark-theme {
